# karzas-latter-seiler

./: .coverage  .gitignore  .pre-commit-config.yaml  EMP Notebook.ipynb  K_series_tests.csv  LICENSE  Play.ipynb  README.md  Scratch Pad.ipynb  constants.py  coverage.xml  emp.py  geometry.py  pyproject.toml  region_scan.py  requirements.txt
.github/workflows/: docs.yml  tests.yml
Digitized Data/Longmire/: StarfishPrime_CHAP_curve.csv
Digitized Data/Seiler/: Fig6_100km.csv  Fig6_200km.csv
Seiler Digitized Data/: Fig5_CHEMP(N).csv  Fig5_HAEMP.csv  Fig6_300km.csv  Fig6_60km.csv
configs/example/: HOB_yield_scan.yaml  basic_line_of_sight.yaml
configs/historical_detonations/: K1.yaml  K2.yaml  K3.yaml  K4.yaml  K5.yaml  StarfishPrime.yaml
data/: HOB_yield_scan.pkl  region_scan_sydney.pkl  region_scan_topeka.pkl
docs/source/: conf.py  index.rst
docs/source/api/: modules.rst
emp/: HOB_yield_scan.py  calibration.py  config.py  constants.py  geomagnetic_field.py  geometry.py  geometry_legacy.py  model.py  region_scan.py  region_scan_parallel.py
notebooks/: EMP Notebook.ipynb
scripts/: K_series_scan.py  make_plots_for_paper.py  run_HOB_yield_scan.py  run_calibration.py  run_line_of_sight.py  run_region_scan.py
tests/: test_config.py  test_geomagnetic_field.py  test_geometry.py  test_geometry_legacy.py  test_model.py
