[tool.poetry]
name = "karzas-latter-seiler"
version = "0.1.0"
description = "The Karzas-Latter-Seiler Model of a High-Altitude Electromagnetic Pulse"
authors = ["Gavin Hartnett <hartnett@rand.org>"]
readme = "README.md"
packages = [{include = "emp"}]


[tool.poetry.dependencies]
python = ">=3.9, <3.13"
matplotlib = "^3.7.1"
numpy = "^1.23.5"
pandas = "^2.0.1"
scipy = "^1.10.1"
seaborn = "^0.12.2"
tqdm = "^4.65.0"
pytest = "^7.4.0"
branca = "^0.4.2"
cycler = "^0.11.0"
folium = "^0.12.1"
geojsoncontour = "^0.4.0"
ppigrf = "^1.0.2"
selenium = "^4.17.2"


[tool.black]
exclude = '''
(
     /(
         docs
     )/
)
'''

[tool.isort]
profile = "black"
force_grid_wrap = "2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"