[tool.poetry]
name = "karzas-latter-seiler"
version = "0.1.0"
description = "The Karzas-Latter-Seiler Model of a High-Altitude Electromagnetic Pulse"
authors = ["Gavin Hartnett <hartnett@rand.org>"]
readme = "README.md"
packages = [{include = "emp"}]


[tool.poetry.dependencies]
python = ">=3.9, <3.13"
matplotlib = "^3.7.1"
numpy = "^1.23.5"
pandas = "^2.0.1"
scipy = "^1.10.1"
seaborn = "^0.12.2"
tqdm = "^4.65.0"
branca = "^0.4.2"
cycler = "^0.11.0"
folium = "^0.12.1"
geojsoncontour = "^0.4.0"
ppigrf = "^1.0.2"
selenium = "^4.17.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.0.0"
black = "^24.3.0"
isort = "^5.12.0"
mypy = "^1.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.1.0"
sphinx-rtd-theme = "^1.3.0"
myst-parser = "^2.0.0"


[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=emp",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, can tighten later
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true

# Per-module options for stricter checking on new code
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "scipy.*",
    "numpy.*",
    "pandas.*",
    "seaborn.*",
    "tqdm.*",
    "folium.*",
    "geojsoncontour.*",
    "ppigrf.*",
    "selenium.*",
    "branca.*",
    "cycler.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["emp"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
